--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,9 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "bcrypt": "^6.0.0",
+    "crypto": "^1.0.1",
     "mongoose": "^8.19.2",
+    "nodemailer": "^7.0.10",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
