--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "crypto": "^1.0.1",
     "mongoose": "^8.19.2",
