--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,9 +28,11 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@types/prismjs": "^1.26.5",
     "apexcharts": "^5.3.2",
+    "chart.js": "^4.5.1",
     "flatpickr": "^4.6.13",
     "ng-apexcharts": "^2.0.0",
     "ng-otp-input": "^2.0.9",
+    "ng2-charts": "^4.1.1",
     "ngx-drag-drop": "^20.0.1",
     "postcss": "^8.5.6",
     "prismjs": "^1.30.0",
